# master-of-jokes

./: .dockerignore  Dockerfile  README.txt  docker-entrypoint.sh  pyproject.toml
flaskr/: __init__.py  auth.py  db.py  jokes.py  logging_routes.py  logging_utils.py  moderator.py  schema.sql
flaskr/master_of_jokes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/jokes/: edit.html  leave.html  my_jokes.html  take.html  view.html
flaskr/templates/moderator/: dashboard.html  edit_joke.html  jokes.html
instance/: flaskr.sqlite
instance/logs/: master_of_jokes.log.1
