[project]
name = "master_of_jokes"
version = "1.0.0"
description = "A Flask web application for sharing and rating jokes"
dependencies = [
    "flask",
    "click",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "flaskr"} 